# pfd-spacy-starter

./: Dockerfile  README.md  pyproject.toml
src/: main.py  models.py
